# libstrawberry

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  constants.rs  file.rs  fmt.rs  lib.rs  logger.rs  networking.rs  reflection.rs  string.rs  time.rs  utilities.rs
src/email/: credentials.rs  message.rs  mod.rs  server.rs
src/ext/: plugin.rs
src/id/: credentials.rs  error.rs  mod.rs  verifier.rs
src/localization/: mod.rs
src/logging/: features.rs  featureset.rs  formats.rs  level.rs  mod.rs
src/notifications/: mod.rs  os.rs
src/notifications/notifiers/: linux.rs  mod.rs  windows.rs
src/scapi/: addons.rs  command.rs  context.rs  flags.rs  mod.rs  permissions.rs
src/stbc/: mod.rs
src/stbchat/: error.rs  keep_alive.rs  mod.rs  net.rs  object.rs  packet.rs
src/stbm/: mod.rs
src/stbm/stbchat/: error.rs  net.rs  object.rs  packet.rs
src/stbm/tcp/: keep_alive.rs
src/strings/: mod.rs
