[package]
name = "stblib"
version = "0.7.3"
edition = "2024"
authors = ["Juliandev02 <julian@strawberryfoundations.org>", "Paddyk45", "matteodev8"]
description = "stblib is a simple library that takes over and simplifies important and useful tasks."
license = "AGPL-3.0-only"
repository = "https://github.com/Strawberry-Foundations/stblib-rust"
keywords = ["notifications", "strawberry-chat", "network", "colors", "localization"]
categories = ["localization", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.docs.rs]
features = ["stbchat", "stbchat-scapi", "notifications", "email", "plugin"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34"
rmp-serde = { version = "1.3.0", optional = true}

tokio = { version = "1.46.1", optional = true, features = ["rt", "rt-multi-thread", "macros"] }
socket2 = { version = "0.6.0", optional = true}
reqwest = { version = "0.12.22", features = ["blocking"] }

chrono = "0.4.41"
regex = "1.11.1"
lettre = { version = "0.11.17", optional = true }
shellwords = "1.1.0"
num-traits = "0.2.19"
os_info = "3.12.0"
dirs = "6.0.0"

thiserror = "2.0.12"
eyre = "0.6.12"

[target.'cfg(unix)'.dependencies]
# dbus = { version = "0.6.5", optional = true }
dbus = { version = "0.9.7", optional = true }

[target.'cfg(windows)'.dependencies]
winrt-notification = { version = "0.5.1", optional = true }

[features]
stbchat = ["dep:tokio", "dep:rmp-serde", "dep:socket2"]
stbchat-sync = ["stbchat"]
stbchat-scapi = ["stbchat"]
notifications = ["dep:dbus", "dep:winrt-notification"]
email = ["dep:lettre"]
plugin = []
full = ["stbchat", "stbchat-scapi", "notifications", "email", "plugin"]
