[package]
name = "libstrawberry"
version = "1.4.4"
edition = "2024"
authors = [
  "Juliandev02 <julian@strawberryfoundations.org>",
  "matteodev8 <me@matteodev.xyz>",
  "Paddyk45",
]
description = "libstrawberry is a simple library that takes over and simplifies important and useful tasks."
license = "AGPL-3.0-only"
repository = "https://github.com/Strawberry-Foundations/libstrawberry"
keywords = ["notifications", "network", "colors", "localization", "logging"]
categories = ["localization", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[package.metadata.docs.rs]
features = ["stbchat", "stbchat-scapi", "notifications", "email", "plugin"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }
serde_yaml = { version = "0.9.34" }
rmp-serde = { version = "1.3.1", optional = true }

tokio = { version = "1.50.0", optional = true, features = [
  "rt",
  "rt-multi-thread",
  "macros",
] }
socket2 = { version = "0.6.3", optional = true }
reqwest = { version = "0.13.2", features = ["blocking"] }

chrono = "0.4.44"
regex = "1.12.3"
lettre = { version = "0.11.20", optional = true }
shellwords = "1.1.0"
num-traits = "0.2.19"
os_info = "3.14.0"
dirs = "6.0.0"

thiserror = { version = "2.0.18", optional = true }
eyre = { version = "0.6.12", optional = true }

[target.'cfg(unix)'.dependencies]
dbus = { version = "0.9.10", optional = true }

[target.'cfg(windows)'.dependencies]
winrt-notification = { version = "0.5.1", optional = true }

[features]
stbchat = [
  "dep:tokio",
  "dep:rmp-serde",
  "dep:socket2",
  "dep:serde",
  "dep:eyre",
  "dep:thiserror",
]
stbchat-sync = ["stbchat"]
stbchat-scapi = ["stbchat"]
notifications = ["dep:dbus", "dep:winrt-notification", "dep:thiserror"]
email = ["dep:lettre"]
plugin = []
strawberryid = ["dep:eyre", "dep:serde", "dep:thiserror", "dep:serde_json"]
full = [
  "stbchat",
  "stbchat-scapi",
  "notifications",
  "email",
  "plugin",
  "strawberryid",
]
